--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ a.f-ref{
 	background-repeat: no-repeat;
 	background-position: top center;
 	background-size: cover;
-    cursor:pointer;
+    cursor:default;
 }
 
 .box h3{
